--- a/style.css
+++ b/style.css
@@ -13,3 +13,22 @@ body {
     height: 100vh;
     margin: 0;
 }
+
+.carousel {
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.3);
+    height: 530px;
+    width: 500px;
+    overflow: hidden;
+}
+
+.image-container {
+    display: flex;
+    transform: translateX(0);
+    transition: transform 0.5s ease-in-out;
+}
+
+img {
+    width: 500px;
+    height: 500px;
+    object-fit: cover;
+}
